--- a/pom.xml
+++ b/pom.xml
@@ -14,4 +14,15 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <!--  Зависимости в Maven-проекте  -->
+    <dependencies>
+        <!--  Spring Boot - урезанная версия Spring, позволяющая запускать проекты на основе Spring с
+          минимальной конфигурацией-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot</artifactId>
+            <version>2.6.6</version>
+        </dependency>
+    </dependencies>
+
 </project>
